# coc-dash

./: Cargo.toml  Dockerfile  README.md
data/: battles.json  leaders.json  teams.json
src/: main.rs  structs.rs  utils.rs
static/: style.css
templates/: index.html  standings.html
