[package]
name = "coc-dash"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.138"
actix = "0.13.5"
actix-web = "4.9.0"
tera = "1.20.0"
serde = { version = "1.0.217", features = ["derive"] }
actix-files = "0.6.6"
sha2 = "0.10.8"
hex = "0.4.3"
dotenv = "0.15.0"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
actix-cors = "0.7.0"
openssl = { version = "0.10", features = ["vendored"] }
tokio = "1.43.0"
